fix canvas spacing and style

--- a/src/Views/Project/Canvas/Cards/index.module.scss
+++ b/src/Views/Project/Canvas/Cards/index.module.scss
@@ -245,6 +245,7 @@
     .graphs__title {
       color: $primary-color-1;
       margin-bottom: 1.2rem;
+      font-size: 1.4rem;
     }
   }
 }
