--- a/src/Views/Project/Components/index.module.scss
+++ b/src/Views/Project/Components/index.module.scss
@@ -285,7 +285,7 @@
     font-size: 1.2rem;
     padding: 0.2rem 1.4rem;
     border-radius: 50px;
-    margin: 0.2rem;
+    margin: 0.1rem;
     cursor: pointer;
     transition: background-color 0.3s ease-in;
 
